--- a/RgpWeb/Views/Unit/Index.cshtml
+++ b/RgpWeb/Views/Unit/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Unit>
+﻿@model IEnumerable<User>
 @{
     ViewData["Title"] = "Index";
 }
@@ -8,7 +8,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Zemes īpašnieki</h2>
+            <h2 class="text-primary">Īpašumi</h2>
         </div>
         <div class="col-6">
             <a asp-controller="User" asp-action="" class="btn btn-primary">
@@ -25,11 +25,9 @@
                 Vārds, Uzvārds/Nosaukums
             </th>
             <th>
-                Izmantošanas veids
+                Tips
             </th>
-            <th>
-                platība
-            </th>
+            
         </tr>
         </thead>
         <tbody>
@@ -37,13 +35,13 @@
         {
             <tr>
                 <td width="30%">
-                    @obj.User.FullName
+                    @obj.FullName
                 </td>
                 <td width="30%">
-                    @obj.LandType
+                   
                 </td>
                 <td width="20%">
-                    @obj.Area
+                    @obj.UserType
                 </td>
             </tr>
         }
