Change User to Owner

--- a/RgpWeb/Views/Shared/_Layout.cshtml
+++ b/RgpWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <span class="visually-hidden">(current)</span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Īpašnieki</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Owner" asp-action="Index">Īpašnieki</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="Index">Vienības</a>
