--- a/RgpWeb/Views/Owner/Index.cshtml
+++ b/RgpWeb/Views/Owner/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UserRequest>
+﻿@model IEnumerable<OwnerRequest>
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,7 +9,7 @@
             <h2 class="text-primary">Zemes īpašnieki</h2>
         </div>
         <div class="col-6">
-            <a asp-controller="User" asp-action="" class="btn btn-primary">
+            <a asp-controller="Owner" asp-action="" class="btn btn-primary">
                 Pievienot zemes īpašnieku
             </a>
         </div>
@@ -32,7 +32,7 @@
     {
         <tr>
             <td width="30%">
-                @obj.UserName
+                @obj.OwnerName
             </td>
             <td width="30%">
                 @obj.LandArea
