--- a/RgpWeb/Views/Property/Index.cshtml
+++ b/RgpWeb/Views/Property/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Property>
-@using RgpWeb.Enums
 @{
     ViewData["Title"] = "Index";
 }
@@ -11,7 +10,7 @@
         </div>
         <div class="col-6 text-end
 ">
-            <a asp-controller="Property" asp-action="" class="btn btn-primary">
+            <a asp-controller="Property" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp;
                 Pievienot īpašumu
             </a>
@@ -46,7 +45,7 @@
                     @obj.PropertyNumber
                 </td>
                 <td width="30%">
-                    @obj.PropertyStatus
+                    @Html.DisplayFor(p => obj.PropertyStatus)
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
