--- a/RgpWeb/Views/Property/Index.cshtml
+++ b/RgpWeb/Views/Property/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="col-6 text-end
 ">
-            <a asp-controller="Property" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Property" asp-action="Create"  class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp;
                 Pievienot īpašumu
             </a>
@@ -38,6 +38,7 @@
         @foreach (var obj in Model)
         {
             <tr>
+                    @Html.HiddenFor(p => obj.Owner.Id)
                 <td width="30%">
                     @obj.Title
                 </td>
