--- a/RgpWeb/Views/Shared/_Layout.cshtml
+++ b/RgpWeb/Views/Shared/_Layout.cshtml
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Owner" asp-action="Index">Īpašnieki</a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="Index">Vienības</a>
-                    </li>
+                    </li>*@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-sm-2" type="text" placeholder="Search">
