--- a/RgpWeb/Views/Shared/_Layout.cshtml
+++ b/RgpWeb/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="Index">Vienības</a>
                     </li>*@
                 </ul>
-                <form class="d-flex">
+                @*<form class="d-flex">
                     <input class="form-control me-sm-2" type="text" placeholder="Search">
                     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                </form>*@
             </div>
         </div>
     </nav>
@@ -44,11 +44,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @*<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - RgpWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>">
     <script src="~/js/site.js" asp-append-version="true"></script>
