--- a/RgpWeb/Views/Unit/Index.cshtml
+++ b/RgpWeb/Views/Unit/Index.cshtml
@@ -88,7 +88,7 @@
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-contoller="Property" asp-action="" asp-route-id="@obj.UnitId"
+                        <a asp-contoller="Property" asp-action="Edit" asp-route-id="@obj.UnitId"
                            class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
                     </div>
                 </td>
