--- a/RgpWeb/Views/Owner/Index.cshtml
+++ b/RgpWeb/Views/Owner/Index.cshtml
@@ -45,13 +45,13 @@
             <td>
                 <div class="w-75 btn-group" role="group">
                     <a asp-contoller="Owner" asp-action="Edit" asp-route-id="@obj.Id"
-                       class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
+                       class="btn btn-secondary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
                 </div>
             </td>
             <td>
                 <div class="w-75 btn-group" role="group">
                     <a asp-contoller="Owner" asp-action="Redirect" asp-route-id="@obj.Id"
-                       class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Skatīt</a>
+                       class="btn btn-info mx-2"><i class="bi bi-eye"></i>Skatīt</a>
                 </div>
             </td>
             </tr>
