--- a/RgpWeb/Views/Property/Index.cshtml
+++ b/RgpWeb/Views/Property/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OwnerPropertyViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Īpašumi";
 }
 
 <div class="container p-3">
@@ -24,7 +24,7 @@
             <th>
                 Nosaukums
             </th>
-            <th>
+            <th class="text-center">
                 Kadastra numurs
             </th>
             <th>
@@ -38,10 +38,10 @@
         {
             <tr>
                 @Html.HiddenFor(p => obj.Owner.Id)
-                <td width="30%">
+                <td width="15%">
                     @obj.Title
                 </td>
-                <td width="30%">
+                <td width="25%" class="text-center">
                     @obj.PropertyNumber
                 </td>
                 <td width="30%">
@@ -50,13 +50,13 @@
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-contoller="Property" asp-action="Edit" asp-route-id="@obj.Id"
-                           class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
+                           class="btn btn-secondary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
                     </div>
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-contoller="Property" asp-action="Redirect" asp-route-id="@obj.Id"
-                           class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Skatīt</a>
+                           class="btn btn-info mx-2"><i class="bi bi-eye"></i>Skatīt</a>
                     </div>
                 </td>
             </tr>
@@ -65,7 +65,7 @@
     </table>
     <div class="row pt-4">
         <div class="col-6 text-end">
-            <a href="@Url.Action("Index", "Owner")"  class="btn btn-primary">
+            <a href="@Url.Action("Index", "Owner")"  class="btn btn-success">
                 Atgriezties
             </a>
         </div>
