--- a/RgpWeb/Views/Unit/Index.cshtml
+++ b/RgpWeb/Views/Unit/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UnitViewModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Vienības";
 }
 
 <div class="container p-3">
@@ -15,7 +15,7 @@
             </a>
         </div>
     </div>
-
+    <br/>
     <table class="table table-bordered table-striped" style="width: 100%">
         <thead>
         <tr>
@@ -63,7 +63,7 @@
                     @obj.Area
                 </td>
                 <td width="10%">
-                    @obj.SurveyDate
+                    @obj.SurveyDate.ToString("d")
                 </td>
                 <td width="10%">
                     @obj.LArea
@@ -89,7 +89,7 @@
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-contoller="Property" asp-action="Edit" asp-route-id="@obj.UnitId"
-                           class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
+                           class="btn btn-secondary mx-2"><i class="bi bi-pencil-square"></i>Labot</a>
                     </div>
                 </td>
             </tr>
@@ -98,7 +98,7 @@
     </table>
     <div class="row pt-4">
         <div class="col-6 text-end">
-            <a href="@Url.Action("Index", "Property", new {id = Model.OwnerId})"  class="btn btn-primary">
+            <a href="@Url.Action("Index", "Property", new {id = Model.OwnerId})"  class="btn btn-success">
                 Atgriezties
             </a>
         </div>
