--- a/RgpWeb/Views/Owner/Edit.cshtml
+++ b/RgpWeb/Views/Owner/Edit.cshtml
@@ -1,35 +1,39 @@
 ﻿@using RgpWeb.Enums
 @model Owner
+@{
+    ViewData["Title"] = "Īpašnieki";
+}
 
-<form method="post">
+@using (Html.BeginForm("Edit", "Owner"))
+{
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Labot zemes īpašnieka datus</h2>
-            <hr/>
+            <h2 class="text-primary">Labot @Model.FullName datus</h2>
+            <br/>
         </div>
         <div class="mb-3">
-            <label asp-for="FullName">Vārds, Uzvārds/ Nosaukums</label>
-            <input asp-for="FullName" class="form-control"/>
-            <span asp-validation-for="FullName" class="text-danger"></span>
+            @Html.LabelFor(m => m.FullName)
+            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.FullName, null, new { @class = "text-danger" })
         </div>
         <div class="mb-3">
-            <label asp-for="RegNumber">Personas kods/ Reģistrācijas Nr.</label>
-            <input asp-for="RegNumber" class="form-control"/>
-            <span asp-validation-for="RegNumber" class="text-danger"></span>
+            @Html.LabelFor(m => m.RegNumber)
+            @Html.TextBoxFor(m => m.RegNumber, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.RegNumber, null, new { @class = "text-danger" })
         </div>
         <div class="mb-3">
-            <label asp-for="OwnerType">Tips</label>
-            @Html.DropDownListFor(m => m.OwnerType, 
-                new SelectList(Enum.GetValues(typeof(OwnerType))), 
+            @Html.LabelFor(m => m.OwnerType)
+            @Html.DropDownListFor(m => m.OwnerType,
+                new SelectList(Enum.GetValues(typeof(OwnerType))),
                 "Izvēlēties",
-                new {@class = "form-control"})
-            <span asp-validation-for="OwnerType" class="text-danger"></span>
+                new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.OwnerType, null, new { @class = "text-danger" })
         </div>
         <br/>
-        <button type="submit" class="btn btn-primary" style="width: 150px">Labot</button>
-        <a asp-controller="Owner" asp-action="Index" class="btn btn-secondary" style="width: 150px">Atgriezties</a>
+            <button type="submit" class="btn" style="width: 150px; background-color: #e6c371">Labot</button>
+        <a href="@Url.Action("Index", "Owner")" class="btn btn-success" style="width: 150px">Atgriezties</a>
     </div>
-</form>
+}
 
 @section Scripts{
     @{
