--- a/RgpWeb/Views/Property/Create.cshtml
+++ b/RgpWeb/Views/Property/Create.cshtml
@@ -1,50 +1,44 @@
 ﻿@using RgpWeb.Enums
 @model CreatePropertyViewModel
+@{
+    ViewData["Title"] = "Īpašumi";
+}
 
-<form method="post">
+@using (Html.BeginForm("Create", "Property"))
+{
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Pievienot īpašumu</h2>
-            <hr/>
+            <br/>
         </div>
         <div class="mb-3">
-            @Html.LabelFor(m => m.PropertyName, new
-            {
-                @class = "col-form-label"
-            })
-            @Html.TextBoxFor(m => m.PropertyName, new { @class = "form-control"})
-            @Html.ValidationMessageFor(m => m.PropertyName, null, new {@class="text-danger"})
+            @Html.LabelFor(m => m.PropertyName)
+            @Html.TextBoxFor(m => m.PropertyName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.PropertyName, null, new { @class = "text-danger" })
         </div>
         <div class="mb-3">
-            @Html.LabelFor(m => m.PropertyNumber, new
-            {
-                @class = "col-form-label"
-            })
-            @Html.TextBoxFor(m => m.PropertyNumber, new { @class = "form-control"})
-            @Html.ValidationMessageFor(m => m.PropertyNumber,null, new { @class ="text-danger"})
+            @Html.LabelFor(m => m.PropertyNumber)
+            @Html.TextBoxFor(m => m.PropertyNumber, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.PropertyNumber, null, new { @class = "text-danger" })
         </div>
         <div class="mb-3">
-            @*<label asp-for="PropertyStatus">Status</label>*@
-            @Html.LabelFor(m => m.PropertyStatus, new
-            {
-                @class = "col-form-label"
-            })
+            @Html.LabelFor(m => m.PropertyStatus)
             @Html.DropDownListFor(m => m.PropertyStatus,
                 new SelectList(Enum.GetValues(typeof(PropertyStatus))),
                 "Izvēlēties",
-                new { @class = "form-control"})
-            @Html.ValidationMessageFor(m => m.PropertyStatus,null, new { @class ="text-danger"})
+                new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.PropertyStatus, null, new { @class = "text-danger" })
         </div>
         @Html.HiddenFor(p => p.OwnerId)
         <br/>
-        <button type="submit" class="btn btn-primary" style="width: 150px">Pievienot</button>
-        <a asp-controller="Property" asp-action="Index" class="btn btn-secondary" asp-route-id="@Model.OwnerId" style="width: 150px">Atgriezties</a>
+            <button type="submit" class="btn" style="width: 150px; background-color: #e6c371">Pievienot</button>
+        <a href="@Url.Action("Index", "Property", new {id = Model.OwnerId})" class="btn btn-success" style="width: 150px">Atgriezties</a>
     </div>
-</form>
+}
 
 @section Scripts{
     @{
-        <partial name="_ValidationScriptsPartial"/>
+    <partial name="_ValidationScriptsPartial"/>
     }
     }
 
